# frame-merger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  merge.py
asm/linux32/: merge_asm_linux32.asm  merge_simd_linux32.asm
asm/linux64/: merge_asm_linux64.asm  merge_simd_linux64.asm
asm/win32/: merge_asm_win32.asm  merge_simd_win32.asm
asm/win64/: merge_asm_win64.asm  merge_simd_win64.asm
src/: main.c  merge.c  merge_opt.c
vids/: prepare-vids.ps1  prepare-vids.sh
